--- a/HugoCrossPoster.csproj
+++ b/HugoCrossPoster.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.0.0-beta.74" />
+    <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="4.0.0-beta.74" />
   </ItemGroup>
 
 </Project>
