--- a/HugoCrossPoster.csproj
+++ b/HugoCrossPoster.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.0.0-beta.74" />
     <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="4.0.0-beta.74" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.0" />
+    <PackageReference Include="Polly" Version="7.2.2" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
