--- a/.github/workflows/crossposter-cicd.yml
+++ b/.github/workflows/crossposter-cicd.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['5.0.x', '6.0.100-preview.3.21202.5' ]
+        dotnet-version: ['5.0.x' ]
 
     steps:
     - uses: actions/checkout@v2
