--- a/src/HugoCrossPoster.csproj
+++ b/src/HugoCrossPoster.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.0;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>HugoCrossPoster</RootNamespace>
   </PropertyGroup>
 
