--- a/.github/workflows/crossposter-cicd.yml
+++ b/.github/workflows/crossposter-cicd.yml
@@ -42,9 +42,9 @@ jobs:
       run: dotnet restore
     - name: Build & Scan
       run: | 
-        dotnet-sonarscanner begin /k:"chrisreddington_HugoCrossPoster" /o:"chrisreddington" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+        ./.sonar/scanner/dotnet-sonarscanner begin /k:"chrisreddington_HugoCrossPoster" /o:"chrisreddington" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
         dotnet build --configuration Release --no-restore
-        dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
     - name: Test
       run: dotnet test --no-restore --verbosity normal      
     - name: SonarCloud Scan
