--- a/.github/workflows/crossposter-cicd.yml
+++ b/.github/workflows/crossposter-cicd.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build & Scan
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: | 
         ./.sonar/scanner/dotnet-sonarscanner begin /k:"chrisreddington_HugoCrossPoster" /o:"chrisreddington" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
         dotnet build --configuration Release --no-restore
