--- a/.github/workflows/crossposter-cicd.yml
+++ b/.github/workflows/crossposter-cicd.yml
@@ -43,12 +43,12 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./.sonar/coverage/ /p:MergeWith=./.sonar/coverage/ --collect "Code coverage"
+      run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
     - name: Build & Scan
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: | 
-        ./.sonar/scanner/dotnet-sonarscanner begin /k:"chrisreddington_HugoCrossPoster" /o:"chrisreddington" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="./.sonar/coverage/coverage.opencover.xml" /d:sonar.coverage.exclusions="**Tests*.cs"
+        ./.sonar/scanner/dotnet-sonarscanner begin /k:"chrisreddington_HugoCrossPoster" /o:"chrisreddington" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="test/coverage.opencover.xml" /d:sonar.coverage.exclusions="**Tests*.cs"
         dotnet build --configuration Release --no-restore
         ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
