Add additional args
Signed-off-by: Chris Reddington <791642+chrisreddington@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -57,3 +57,9 @@ runs:
   - "${{ inputs.directoryPath }}"
   - "-r"
   - "${{ inputs.recursiveSubdirectories }}"
+  - "-o"
+  - "${{ inputs.originalPostInformation }}"
+  - "-l"
+  - "${{ inputs.logOutputOnly }}"
+  - "-s"
+  - "${{ inputs.searchPattern }}"
