further additional args
Signed-off-by: Chris Reddington <791642+chrisreddington@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -67,3 +67,9 @@ runs:
   - "${{ inputs.baseUrl }}"
   - "-d"
   - "${{ inputs.devtoToken }}"
+  - "-a"
+  - "${{ inputs.mediumAuthorId }}"
+  - "-i"
+  - "${{ inputs.mediumToken }}"
+  - "-p"
+  - "${{ inputs.protocol }}"
